Changed unit test page title

--- a/tests/index.html
+++ b/tests/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>DATON Unit Tests</title>
+  <title>DATON</title>
   <link rel="stylesheet" href="css/qunit-2.6.1.css">
   <style>
       #qunit-userAgent { display: none; }
