--- a/tests/index.html
+++ b/tests/index.html
@@ -13,7 +13,11 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="js/qunit-2.6.1.js"></script>
+  <script src="js/utils.js"></script>
   <script src="../DATON.js"></script>
-  <script src="units/core.js"></script>
+  <script src="units/values.js"></script>
+  <script src="units/arrays.js"></script>
+  <script src="units/objects.js"></script>
+  <script src="units/attributes.js"></script>
 </body>
 </html>
