Namespace unit tests

--- a/tests/index.html
+++ b/tests/index.html
@@ -19,5 +19,7 @@
   <script src="units/arrays.js"></script>
   <script src="units/objects.js"></script>
   <script src="units/attributes.js"></script>
+  <script src="units/structures.js"></script>
+  <script src="units/namespaces.js"></script>
 </body>
 </html>
