Updated tests script location

--- a/tests/index.html
+++ b/tests/index.html
@@ -14,7 +14,7 @@
   <div id="qunit-fixture"></div>
   <script src="js/qunit-2.6.1.js"></script>
   <script src="js/utils.js"></script>
-  <script src="../DATON.js"></script>
+  <script src="../dist/DATON.min.js"></script>
   <script src="units/values.js"></script>
   <script src="units/arrays.js"></script>
   <script src="units/objects.js"></script>
